--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Neuroinveste - Hugo Heringer</title>
+  <title>NeuroInveste - Hugo Heringer</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -20,8 +20,8 @@
   <nav class="bg-gray-800 text-white shadow-md">
     <div class="max-w-7xl mx-auto px-4 flex justify-between items-center h-16">
       <a href="#" class="flex items-center space-x-2">
-        <img src="./images/logodourado.png" alt="Logo Neuroinveste" class="h-8 w-8">
-        <span class="font-semibold">Neuroinveste</span>
+        <img src="./images/logodourado.png" alt="Logo NeuroInveste" class="h-8 w-8">
+        <span class="font-semibold">NeuroInveste</span>
       </a>
 
       <!-- Menu desktop -->
@@ -197,7 +197,7 @@
     <h2 class="text-2xl font-bold text-center mb-6">Fale Comigo</h2>
     <div class="bg-white shadow-lg rounded-2xl p-6">
       <p class="mb-4 text-gray-700">Entre em contato para parcerias, projetos e pesquisas acadêmicas.</p>
-      <p><strong>Email:</strong> <a href="mailto:neuroinveste@gmail.com" class="text-blue-600">neuroinveste@gmail.com</a></p>
+      <p><strong>Email:</strong> <a href="mailto:NeuroInveste@gmail.com" class="text-blue-600">NeuroInveste@gmail.com</a></p>
       <p><strong>Telefone:</strong> (33) 9 8832-6566</p>
       <p><strong>Localização:</strong> Manhuaçu - MG</p>
     </div>
@@ -205,7 +205,7 @@
 
   <!-- Rodapé -->
   <footer class="bg-gray-800 text-gray-300 py-6 text-center text-sm">
-    © 2025 Hugo Heringer - Neuroinveste <br>
+    © 2025 Hugo Heringer - NeuroInveste <br>
     <span class="text-xs text-gray-400">
       Este site é mantido por um estudante de Psicologia. Não possui intuito de oferecer atendimento clínico,
       mas apenas divulgar conteúdos educacionais e buscar parcerias em projetos e pesquisas acadêmicas.
